Fix overlap issue on orders modal.

--- a/src/containers/OrdersModal/OrdersModal.css
+++ b/src/containers/OrdersModal/OrdersModal.css
@@ -14,13 +14,19 @@
   border-radius: 5px 0 0 5px;
 }
 
-.input-container-other-fluids {
+.input-container-other-fluids-visible {
   grid-area: otherInputs;
+  visibility: visible;
 }
 
-.input-container-anticoagulation {
-  grid-area: anticoagulationInputs;
+.input-container-other-fluids-invisible {
+  grid-area: otherInputs;
+  visibility: hidden;
 }
+
+/* .input-container-anticoagulation {
+  grid-area: anticoagulationInputs;
+} */
 
 .orders-modal-main-content {
   padding: 0 1rem;
@@ -242,11 +248,11 @@
   font-weight: 600;
 }
 
-.orders-modality-anticoagulation-container {
+/* .orders-modality-anticoagulation-container {
   height: 6rem;
   text-align: left;
   grid-area: anticoagulation;
-}
+} */
 
 .other-fluids-meds-checkbox {
   margin: 0.25rem;
@@ -258,7 +264,7 @@
 
 .orders-modal-footer {
   grid-area: footer;
-  margin: 3rem auto;
+  margin: 8rem auto 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
